make CloudAccount.platform_* fields required, not-null
