# cloudigrade/api/models.py
@@ -29,10 +29,10 @@ class CloudAccount(BaseGenericModel):
     # Unfortunately because of the way platform Sources is designed
     # we must also keep track of the source_id and the endpoint_id.
     # Why? see https://github.com/RedHatInsights/sources-api/issues/179
-    platform_authentication_id = models.IntegerField(null=True)
-    platform_application_id = models.IntegerField(null=True)
-    platform_endpoint_id = models.IntegerField(null=True)
-    platform_source_id = models.IntegerField(null=True)
+    platform_authentication_id = models.IntegerField()
+    platform_application_id = models.IntegerField()
+    platform_endpoint_id = models.IntegerField()
+    platform_source_id = models.IntegerField()
 
     class Meta:
         unique_together = ("user", "name")
